--- a/changlog/index.html
+++ b/changlog/index.html
@@ -11,6 +11,24 @@
 
 > 欢迎加入交流群：`931546484`
 
+## LLCOM 1.1.3.3(concise)
+
+新增：
+
+- 运行脚本、接收脚本、发送脚本的删除按钮
+- 接收脚本、发送脚本的刷新按钮
+- 简化快捷发送列表的布局和初始数据
+- 删除曲线工具外的其他工具模块
+- 增加分包显示开关
+- 移除更新通知、热更新、强制更新功能
+
+修复：
+
+- 一些英文语言切换问题，更友好的英文语言支持
+- 删除一些不重要的设置功能
+- 修改一些错误描述
+- 优化曲线工具的一些功能
+
 ## LLCOM 1.1.3.3
 
 新增：
